// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Button Button primary with colors 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FF1900;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5:hover {
  background-color: hsl(5.899999999999977,100%,45%);
  color: #FFFFFF;
}

.c5:active {
  background-color: hsl(5.899999999999977,100%,40%);
}

.c5::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      t =&gt; t.color.cta
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      t =&gt; t.color.negative
    </div>
    <div>
      <button
        className="c5"
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button primary with size modified 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5:hover {
  background-color: hsl(223.5,100%,45%);
}

.c5:active {
  background-color: hsl(223.5,100%,40%);
}

.c5::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 0px 8px;
  min-height: 24px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 8px 16px;
  min-height: 40px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6:hover {
  background-color: hsl(223.5,100%,45%);
}

.c6:active {
  background-color: hsl(223.5,100%,40%);
}

.c6::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Small
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c4"
        >
          Small
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Medium
    </div>
    <div>
      <button
        className="c5"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c4"
        >
          Medium
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Large
    </div>
    <div>
      <button
        className="c6"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c7"
        >
          Large
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button secondary with colors 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  padding: 4px 12px;
  min-height: 32px;
  color: #0046FF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid #0046FF;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FF1900;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5:hover {
  background-color: hsl(5.899999999999977,100%,45%);
  color: #FFFFFF;
}

.c5:active {
  background-color: hsl(5.899999999999977,100%,40%);
}

.c5::before {
  content: '';
  display: block;
  border: 2px solid #FF1900;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      t =&gt; t.color.cta
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        type="button"
        variant="secondary"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      t =&gt; t.color.negative
    </div>
    <div>
      <button
        className="c5"
        onClick={[Function]}
        type="button"
        variant="secondary"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button secondary with size modified 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  padding: 4px 12px;
  min-height: 32px;
  color: #0046FF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c5:active {
  background-color: hsl(223.5,100%,40%);
}

.c5::before {
  content: '';
  display: block;
  border: 2px solid #0046FF;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  padding: 0px 8px;
  min-height: 24px;
  color: #0046FF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid #0046FF;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  padding: 8px 16px;
  min-height: 40px;
  color: #0046FF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c6:active {
  background-color: hsl(223.5,100%,40%);
}

.c6::before {
  content: '';
  display: block;
  border: 2px solid #0046FF;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Small
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        type="button"
        variant="secondary"
      >
        <span
          className="c4"
        >
          Small
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Medium
    </div>
    <div>
      <button
        className="c5"
        onClick={[Function]}
        type="button"
        variant="secondary"
      >
        <span
          className="c4"
        >
          Medium
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      Large
    </div>
    <div>
      <button
        className="c6"
        onClick={[Function]}
        type="button"
        variant="secondary"
      >
        <span
          className="c7"
        >
          Large
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button that is full width 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

.c0::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Button with different variants 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  padding: 4px 12px;
  min-height: 32px;
  color: #0046FF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c5:active {
  background-color: hsl(223.5,100%,40%);
}

.c5::before {
  content: '';
  display: block;
  border: 2px solid #0046FF;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: transparent;
  padding: 0;
  min-height: 32px;
  color: #282823;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      primary
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      secondary
    </div>
    <div>
      <button
        className="c5"
        onClick={[Function]}
        type="button"
        variant="secondary"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      neutral
    </div>
    <div>
      <button
        className="c6"
        onClick={[Function]}
        type="button"
        variant="neutral"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with type modified 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Reset
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        type="reset"
      >
        <span
          className="c4"
        >
          Reset
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Submit
    </div>
    <div>
      <button
        className="c3"
        onClick={[Function]}
        type="submit"
      >
        <span
          className="c4"
        >
          Submit
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Buttons composed in a group 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2:hover {
  background-color: hsl(223.5,100%,45%);
}

.c2:active {
  background-color: hsl(223.5,100%,40%);
}

.c2::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #FFFFFF;
  padding: 4px 12px;
  min-height: 32px;
  color: #0046FF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c4:active {
  background-color: hsl(223.5,100%,40%);
}

.c4::before {
  content: '';
  display: block;
  border: 2px solid #0046FF;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

<div
  className="c0"
>
  <div
    className="c1"
    flex="1 1 50%"
  >
    <button
      className="c2"
      onClick={[Function]}
      type="submit"
    >
      <span
        className="c3"
      >
        Submit
      </span>
    </button>
  </div>
  <div
    className="c1"
    flex="1 1 50%"
  >
    <button
      className="c4"
      onClick={[Function]}
      type="reset"
      variant="secondary"
    >
      <span
        className="c3"
      >
        Reset
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Default usage 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

.c0::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

<button
  className="c0"
  onClick={[Function]}
  type="button"
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Disabled Button with different variants 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #EBEBE8;
  padding: 4px 12px;
  min-height: 32px;
  color: #A0A09B;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: transparent;
  padding: 0;
  min-height: 32px;
  color: #A0A09B;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c5::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="row"
>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      primary
    </div>
    <div>
      <button
        className="c3"
        disabled={true}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      secondary
    </div>
    <div>
      <button
        className="c3"
        disabled={true}
        onClick={[Function]}
        type="button"
        variant="secondary"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
    direction="column"
  >
    <div
      className="c2"
    >
      neutral
    </div>
    <div>
      <button
        className="c5"
        disabled={true}
        onClick={[Function]}
        type="button"
        variant="neutral"
      >
        <span
          className="c4"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Disabled link looking like a button 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background-color: #EBEBE8;
  padding: 4px 12px;
  min-height: 32px;
  color: #A0A09B;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

<button
  className="c0"
  disabled={true}
  onClick={[Function]}
  type="button"
  variant="secondary"
>
  <span
    className="c1"
  >
    Button
  </span>
</button>
`;

exports[`Storyshots Molecules | Button Link looking like a button 1`] = `
.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5 {
  background-color: #FFFFFF;
  padding: 4px 12px;
  min-height: 32px;
  color: #0046FF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c5:active {
  background-color: hsl(223.5,100%,40%);
}

.c5::before {
  content: '';
  display: block;
  border: 2px solid #0046FF;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Reset
    </div>
    <div>
      <a
        className="c3"
        href="#/route1"
        onClick={[Function]}
      >
        <span
          className="c4"
        >
          To Route1
        </span>
      </a>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      Submit
    </div>
    <div>
      <a
        className="c5"
        href="#/route2"
        onClick={[Function]}
        variant="secondary"
      >
        <span
          className="c4"
        >
          To Route2
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Link looking like a button that is full width 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

.c0::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

<a
  className="c0"
  href="#/www.google.com"
  onClick={[Function]}
>
  <span
    className="c1"
  >
    Button
  </span>
</a>
`;

exports[`Storyshots Molecules | Button Link looking like a button with rel as nofollow 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  background-color: hsl(223.5,100%,45%);
}

.c0:active {
  background-color: hsl(223.5,100%,40%);
}

.c0::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

<a
  className="c0"
  href="#/www.google.com"
  onClick={[Function]}
  rel="nofollow"
>
  <span
    className="c1"
  >
    Button
  </span>
</a>
`;

exports[`Storyshots Molecules | Button Link looking like a button with with colors 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:768px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Primary
    </span>
  </div>,
  .c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5 {
  background-color: #FF1900;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover {
  background-color: hsl(5.899999999999977,100%,45%);
  color: #FFFFFF;
}

.c5:active {
  background-color: hsl(5.899999999999977,100%,40%);
}

.c5::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        t =&gt; t.color.cta
      </div>
      <div>
        <a
          className="c3"
          href="#/www.google.com"
          onClick={[Function]}
        >
          <span
            className="c4"
          >
            Button
          </span>
        </a>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        t =&gt; t.color.negative
      </div>
      <div>
        <a
          className="c5"
          href="#/www.google.com"
          onClick={[Function]}
        >
          <span
            className="c4"
          >
            Button
          </span>
        </a>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
  .c0 {
  margin-bottom: 16px;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:768px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Secondary
    </span>
  </div>,
  .c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  background-color: #FFFFFF;
  padding: 4px 12px;
  min-height: 32px;
  color: #0046FF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c3:active {
  background-color: hsl(223.5,100%,40%);
}

.c3::before {
  content: '';
  display: block;
  border: 2px solid #0046FF;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5 {
  background-color: #FFFFFF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FF1900;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover {
  background-color: hsl(5.899999999999977,100%,45%);
  color: #FFFFFF;
}

.c5:active {
  background-color: hsl(5.899999999999977,100%,40%);
}

.c5::before {
  content: '';
  display: block;
  border: 2px solid #FF1900;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        t =&gt; t.color.cta
      </div>
      <div>
        <a
          className="c3"
          href="#/www.google.com"
          onClick={[Function]}
          variant="secondary"
        >
          <span
            className="c4"
          >
            Button
          </span>
        </a>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        t =&gt; t.color.negative
      </div>
      <div>
        <a
          className="c5"
          href="#/www.google.com"
          onClick={[Function]}
          variant="secondary"
        >
          <span
            className="c4"
          >
            Button
          </span>
        </a>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules | Button Links looking like buttons composed in a group 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  background-color: #0046FF;
  padding: 4px 12px;
  min-height: 32px;
  color: #FFFFFF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  background-color: hsl(223.5,100%,45%);
}

.c2:active {
  background-color: hsl(223.5,100%,40%);
}

.c2::before {
  content: '';
  display: block;
  border: 2px solid transparent;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c4 {
  background-color: #FFFFFF;
  padding: 4px 12px;
  min-height: 32px;
  color: #0046FF;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  background-color: hsl(223.5,100%,45%);
  color: #FFFFFF;
}

.c4:active {
  background-color: hsl(223.5,100%,40%);
}

.c4::before {
  content: '';
  display: block;
  border: 2px solid #0046FF;
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

<div
  className="c0"
>
  <div
    className="c1"
    flex="1"
  >
    <a
      className="c2"
      href="#/route1"
      onClick={[Function]}
    >
      <span
        className="c3"
      >
        Submit
      </span>
    </a>
  </div>
  <div
    className="c1"
    flex="1"
  >
    <a
      className="c4"
      href="#/route2"
      onClick={[Function]}
      variant="secondary"
    >
      <span
        className="c3"
      >
        Reset
      </span>
    </a>
  </div>
</div>
`;
